# node_game

./: .copier-answers.yml  Cargo.toml  justfile
source_assets/: background.ase  bullet.ase  cursor.ase  enemy.ase  player.ase
src/: assets.rs  background.rs  main.rs
src/gameplay/: mod.rs
src/node_editor/: mod.rs
